--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     aria-expanded="false" aria-controls="navbar"><i></i></a>
    <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
     <div class="text-center">
-     <img alt="Wei Zhang" border="0" src="zw.jpg" hspace="0"><br><br>
+     <img alt="Wei Zhang" border="0" src="1.jpg" hspace="0"><br><br>
      <h2>Wei Zhang</h2>
      <h2>张蔚</h2>
      <font size="4">CS Ph.D Student from 2017<font>
