--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     aria-expanded="false" aria-controls="navbar"><i></i></a>
    <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
     <div class="text-center">
-     <img alt="Wei Zhang" border="0" src="1.jpg" hspace="0"><br><br>
      <h2>Wei Zhang</h2>
      <h2>张蔚</h2>
      <font size="4">CS Ph.D Student from 2017<font>
@@ -73,12 +72,12 @@
            <h2>Brief Biography</h2>
            <font size="4">
             <p> I am a 5th year Ph.D. candidate in Department of Computer Science and Engineering at Shanghai Jiao Tong University, advised by <a href="https://cs.sjtu.edu.cn/~guo-my/"
-              target="_blank">Prof. Minyi Guo</a>.<br> and <a href="https://www.cs.sjtu.edu.cn/~chen-quan/index.html"target="_blank">Prof. Quan Chen</a>.<br>. 
-                          I am interested in cloud computing, microservices, GPU resource management, ML for systems and computer architecture. 
-                          My research focuses on QoS-aware resource management in co-located datacenters and managing GPU microservices in datacenters, improving their performance and resource efficiency. 
-                          Before studying at SJTU, I obtained my B.Eng. degree in Huazhong University of Science and Technology (HUST) in 2017. 
-                          I was a Ph.D. research intern at Microsoft Research Asia (MSRA) in 2020 and 2021, hosted by Zhenhua Han. 
-                          During my internship, I did research on improving resource efficiency of cloud gaming datacenters.<br></p>
+              target="_blank">Prof. Minyi Guo</a> and <a href="https://www.cs.sjtu.edu.cn/~chen-quan/index.html"target="_blank">Prof. Quan Chen</a>.<br>
+                I am interested in cloud computing, microservices, GPU resource management, ML for systems and computer architecture.<br><br>
+                My research focuses on QoS-aware resource management in co-located datacenters and managing GPU microservices in datacenters, improving their performance and resource efficiency.<br><br> 
+                Before studying at SJTU, I obtained my B.Eng. degree in Huazhong University of Science and Technology (HUST) in 2017.<br><br> 
+                I was a Ph.D. research intern at Microsoft Research Asia (MSRA) in 2020 and 2021, hosted by Zhenhua Han. <br><br>
+                During my internship, I did research on improving resource efficiency of cloud gaming datacenters.<br></p>
            </font>
           </div>
          </div>
@@ -100,7 +99,7 @@
             <ol>
              <li>
               <div align="justify">
-               <p><strong>[ASPLOS'22, Accepted] Astraea: Towards QoS-Aware and Resource-Efficient Multi-stage GPU Services</strong><br>
+               <p><strong>[ASPLOS'22, Accepted]</strong> Astraea: Towards QoS-Aware and Resource-Efficient Multi-stage GPU Services<br>
                 <strong>Wei Zhang</strong>, Quan Chen, Kaihua Fu, Ningxin Zheng, Jingwen Leng, Minyi Guo<br>
                </p>
               </div>
@@ -108,31 +107,14 @@
 
              <li>
               <div align="justify">
-               <p><strong>[ICCD'21] CHARM: Collaborative Host and Accelerator Resource Management for GPU Datacenters</strong><br>
+               <p><strong>[ICCD'21]</strong> CHARM: Collaborative Host and Accelerator Resource Management for GPU Datacenters<br>
                 <strong>Wei Zhang</strong>, Kaihua Fu, Ningxin Zheng, Quan Chen, Chao Li, Wenli Zheng, Minyi Guo<br>
                </p>
               </div>
              </li>
-
              <li>
               <div align="justify">
-               <p><strong>[TPDS'21, Accepted] Adaptive Resource Efficient Microservice Deployment in Cloud-Edge Continuum</strong> <br>
-                Kaihua Fu, <strong>Wei Zhang</strong>, Quan Chen, Deze Zeng, Minyi Guo<br>
-               </p>
-              </div>
-             </li>
-
-             <li>
-              <div align="justify">
-               <p><strong>[IPDPS'21] QoS-Aware and Resource Efficient Microservice Deployment in Cloud-Edge Continuum</strong> <br>
-                Kaihua Fu, <strong>Wei Zhang</strong>, Quan Chen, Deze Zeng, Xin Peng, Wenli Zheng, Minyi Guo<br>
-               </p>
-              </div>
-             </li>
-
-             <li>
-              <div align="justify">
-               <p><strong>[TC'21] Towards QoS-awareness and Improved Utilization of Spatial Multitasking GPUs.</strong> <br>
+               <p><strong>[TC'21]</strong> Towards QoS-awareness and Improved Utilization of Spatial Multitasking GPUs. <br>
                 <strong>Wei Zhang</strong>, Quan Chen, Ningxin Zheng, Weihao Cui, Kaihua Fu, Minyi Guo<br>
                </p>
               </div>
@@ -140,7 +122,7 @@
 
              <li>
               <div align="justify">
-               <p><strong>[ICPP'20] URSA: Precise Capacity Planning and Fair Scheduling based on Low-level Statistics for Public Clouds</strong> <br>
+               <p><strong>[ICPP'20]</strong> URSA: Precise Capacity Planning and Fair Scheduling based on Low-level Statistics for Public Clouds <br>
                 <strong>Wei Zhang</strong>, Ningxin Zheng, Quan Chen, Yong Yang, Zhuo Song, Tao Ma, Jingwen Leng, Minyi Guo<br>
                </p>
               </div>
@@ -148,8 +130,23 @@
                           
                           <li>
               <div align="justify">
-               <p><strong>[ICS'19] Laius: Towards Latency Awareness and Improved Utilization of Spatial Multitasking Accelerators in Datacenters</strong> <br>
+               <p><strong>[ICS'19]</strong> Laius: Towards Latency Awareness and Improved Utilization of Spatial Multitasking Accelerators in Datacenters <br>
                 <strong>Wei Zhang</strong>, Weihao Cui, Kaihua Fu, Quan Chen, Daniel Mawhirter, Bo Wu, Chao Li, Minyi Guo<br>
+               </p>
+              </div>
+             </li>
+             <li>
+              <div align="justify">
+               <p><strong>[TPDS'21, Accepted]</strong> Adaptive Resource Efficient Microservice Deployment in Cloud-Edge Continuum<br>
+                Kaihua Fu, <strong>Wei Zhang</strong>, Quan Chen, Deze Zeng, Minyi Guo<br>
+               </p>
+              </div>
+             </li>
+
+             <li>
+              <div align="justify">
+               <p><strong>[IPDPS'21]</strong> QoS-Aware and Resource Efficient Microservice Deployment in Cloud-Edge Continuum<br>
+                Kaihua Fu, <strong>Wei Zhang</strong>, Quan Chen, Deze Zeng, Xin Peng, Wenli Zheng, Minyi Guo<br>
                </p>
               </div>
              </li>
