--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
            <font size="4">
             <p> I am a 5th year Ph.D. candidate in Department of Computer Science and Engineering at Shanghai Jiao Tong University, advised by <a href="https://cs.sjtu.edu.cn/~guo-my/"
               target="_blank">Prof. Minyi Guo</a> and <a href="https://www.cs.sjtu.edu.cn/~chen-quan/index.html"target="_blank">Prof. Quan Chen</a>.<br>
-                I am interested in cloud computing, microservices, GPU resource management, ML for systems and computer architecture.<br><br>
-                My research focuses on QoS-aware resource management in co-located datacenters and managing GPU microservices in datacenters, improving their performance and resource efficiency.<br><br> 
+                I am interested in cloud computing, microservices, GPU resource management, ML for systems and computer architecture.<br>
+                My research focuses on QoS-aware resource management in co-located datacenters and managing GPU microservices in datacenters, improving their performance and resource efficiency.<br> 
                 Before studying at SJTU, I obtained my B.Eng. degree in Huazhong University of Science and Technology (HUST) in 2017.<br><br> 
-                I was a Ph.D. research intern at Microsoft Research Asia (MSRA) in 2020 and 2021, hosted by Zhenhua Han. <br><br>
+                I was a Ph.D. research intern at Microsoft Research Asia (MSRA) in 2020 and 2021, hosted by Zhenhua Han. <br>
                 During my internship, I did research on improving resource efficiency of cloud gaming datacenters.<br></p>
            </font>
           </div>
