--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         Institution:<br>
         <a href="http://epcc.sjtu.edu.cn" target="_blank">EPCC Lab</a><br>
         <a href="http://cs.sjtu.edu.cn" target="_blank">Department of Computer Science and Engineering</a><br>
-        <a href="https://sjtu.edu.cn" target="_blank">Shanghai Jiao Tong University（上海交通大学）</a><br><br>
+        <a href="https://www.sjtu.edu.cn" target="_blank">Shanghai Jiao Tong University（上海交通大学）</a><br><br>
         <font size="3">
          E-mail:<br>
          zhang-w [at] sjtu.edu.cn</font><br>
