--- a/index.html
+++ b/index.html
@@ -87,8 +87,15 @@
             <ol>
              <li>
               <div align="justify">
-               <p><strong>[ASPLOS'22, Accepted]</strong> Astraea: Towards QoS-Aware and Resource-Efficient Multi-stage GPU Services<br>
-                <strong>Wei Zhang</strong>, Quan Chen, Kaihua Fu, Ningxin Zheng, Jingwen Leng, Minyi Guo<br>
+               <p><strong>[ATC'22, Accepted]</strong> PilotFish: Harvesting Free Cycles of Cloud Gaming with Deep Learning Training<br>
+                <strong>Wei Zhang</strong>, Binghao Chen, Zhenhua Han, Quan Chen, Peng Cheng, Fang Yang, Ran Shu, Yuqing Yang, Minyi Guo. USENIX Annual Technical Conference. 2022.<br>
+               </p>
+              </div>
+             </li>
+             <li>
+              <div align="justify">
+               <p><strong>[ASPLOS'22]</strong> Astraea: Towards QoS-Aware and Resource-Efficient Multi-stage GPU Services<br>
+                <strong>Wei Zhang</strong>, Quan Chen, Kaihua Fu, Ningxin Zheng, Jingwen Leng, Minyi Guo. Conference on Architectural Support for Programming Languages and Operating Systems. 2022.<br>
                </p>
               </div>
              </li>
@@ -96,14 +103,14 @@
              <li>
               <div align="justify">
                <p><strong>[ICCD'21]</strong> CHARM: Collaborative Host and Accelerator Resource Management for GPU Datacenters<br>
-                <strong>Wei Zhang</strong>, Kaihua Fu, Ningxin Zheng, Quan Chen, Chao Li, Wenli Zheng, Minyi Guo<br>
+                <strong>Wei Zhang</strong>, Kaihua Fu, Ningxin Zheng, Quan Chen, Chao Li, Wenli Zheng, Minyi Guo. International Conference on Computer Design. 2021. <br>
                </p>
               </div>
              </li>
              <li>
               <div align="justify">
                <p><strong>[TC'21]</strong> Towards QoS-awareness and Improved Utilization of Spatial Multitasking GPUs. <br>
-                <strong>Wei Zhang</strong>, Quan Chen, Ningxin Zheng, Weihao Cui, Kaihua Fu, Minyi Guo<br>
+                <strong>Wei Zhang</strong>, Quan Chen, Ningxin Zheng, Weihao Cui, Kaihua Fu, Minyi Guo. IEEE Transactions on Computers, 2021.<br>
                </p>
               </div>
              </li>
@@ -111,7 +118,7 @@
              <li>
               <div align="justify">
                <p><strong>[ICPP'20]</strong> URSA: Precise Capacity Planning and Fair Scheduling based on Low-level Statistics for Public Clouds <br>
-                <strong>Wei Zhang</strong>, Ningxin Zheng, Quan Chen, Yong Yang, Zhuo Song, Tao Ma, Jingwen Leng, Minyi Guo<br>
+                <strong>Wei Zhang</strong>, Ningxin Zheng, Quan Chen, Yong Yang, Zhuo Song, Tao Ma, Jingwen Leng, Minyi Guo. International Conference on Parallel Processing. 2020.<br>
                </p>
               </div>
              </li>
@@ -119,14 +126,14 @@
                           <li>
               <div align="justify">
                <p><strong>[ICS'19]</strong> Laius: Towards Latency Awareness and Improved Utilization of Spatial Multitasking Accelerators in Datacenters <br>
-                <strong>Wei Zhang</strong>, Weihao Cui, Kaihua Fu, Quan Chen, Daniel Mawhirter, Bo Wu, Chao Li, Minyi Guo<br>
+                <strong>Wei Zhang</strong>, Weihao Cui, Kaihua Fu, Quan Chen, Daniel Mawhirter, Bo Wu, Chao Li, Minyi Guo. ACM International Conference on Supercomputing. 2019.<br>
                </p>
               </div>
              </li>
              <li>
               <div align="justify">
-               <p><strong>[TPDS'21, Accepted]</strong> Adaptive Resource Efficient Microservice Deployment in Cloud-Edge Continuum<br>
-                Kaihua Fu, <strong>Wei Zhang</strong>, Quan Chen, Deze Zeng, Minyi Guo<br>
+               <p><strong>[TPDS'22]</strong> Adaptive Resource Efficient Microservice Deployment in Cloud-Edge Continuum<br>
+                Kaihua Fu, <strong>Wei Zhang</strong>, Quan Chen, Deze Zeng, Minyi Guo. IEEE Transactions on Parallel and Distributed Systems, 2022. <br>
                </p>
               </div>
              </li>
