--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <div class="text-center">
      <h2>Wei Zhang</h2>
      <h2>张蔚</h2>
-     <font size="4">CS Ph.D Student from 2017<font>
+     <font size="4">CS Ph.D Student from Shanghai JiaoTong University<font>
+      <font size="4">上海交通大学计算机科学与工程系 博士<font>
        <hr style=" border-top:1px dashed;" />
        <font size="3">
         Institution:<br>
